# doublePendulum

./: .gitignore  README.md
falling-sand/: README.md  fallingSand.cpp
lorenz-attractor/: CMakeLists.txt  README.md  lorenz.cpp
